--- a/5-fetching-csv-data/groceries.html
+++ b/5-fetching-csv-data/groceries.html
@@ -50,8 +50,7 @@
         Display the answers on the page in the designated areas.
 
         <ol type="A">
-            <li>Sort the products by name in ascending order.</li>
-            <li>Loop through all the sorted products and display the name and price of each, in a separate list item.
+            <li>Loop through all the products and display the name and price of each, in a separate list item.
                 Use the designated <code>ul</code> element below.
                 Format the prices as currency using a dollar sign and rounding to two decimal places.
             </li>
