--- a/0-practice/dom-practice.html
+++ b/0-practice/dom-practice.html
@@ -23,12 +23,12 @@
     <script type="text/javascript">
 
         // select elements from the DOM by specifying their unique identifiers:
-        //var myDiv = document.getElementById("my-container")
-        //var myParagraph = document.getElementById("my-message")
+        var myDiv = document.getElementById("my-container")
+        var myParagraph = document.getElementById("my-message")
 
         // manipulate properties of an element:
-        //myParagraph.innerHTML = "Fun times!"
-        //myParagraph.style.color = "red"
+        myParagraph.innerHTML = "Fun times!"
+        myParagraph.style.color = "red"
 
         // can even create new elements:
         //var myHeading = document.createElement("h3")
