--- a/1-lang-overview/circle.html
+++ b/1-lang-overview/circle.html
@@ -51,13 +51,32 @@
 
         console.log("---------------------")
         console.log("PART 1...")
+function calculateCircleArea(radius) {
+    return Math.PI * radius * radius;
+}
 
+let radius = 9;
+let area = calculateCircleArea(radius);
+console.log("Radius:", radius);
+console.log("Area:", area);
 
 
 
 
         console.log("---------------------")
         console.log("PART 2...")
+        document.getElementById("calculate").addEventListener("click", function () {
+    let inputRadius = document.getElementById("input-radius").value;
+    let radius = parseFloat(inputRadius);
+
+    if (!isNaN(radius)) {
+        let area = calculateCircleArea(radius);
+        document.getElementById("display-area").textContent = area.toFixed(2);
+    } else {
+        document.getElementById("display-area").textContent = "Invalid input";
+    }
+});
+
 
 
 
