--- a/2-control-flow/umbrella.html
+++ b/2-control-flow/umbrella.html
@@ -70,24 +70,49 @@
 
         console.log("---------------------")
         console.log("PART 1...")
+        let isRaining = true;
+let ownsUmbrella = false;
 
+console.log("Is it raining?", isRaining);
+console.log("Owns umbrella?", ownsUmbrella);
 
-
-
+if (!isRaining) {
+    console.log("Skies are clear");
+} else {
+    if (ownsUmbrella) {
+        console.log("Bring your umbrella");
+    } else {
+        console.log("Buy an umbrella");
+    }
+}
 
         console.log("---------------------")
         console.log("PART 2...")
+        function advise(isRaining, ownsUmbrella) {
+    if (!isRaining) {
+        return "Skies are clear";
+    } else if (ownsUmbrella) {
+        return "Bring your umbrella";
+    } else {
+        return "Buy an umbrella";
+    }
+}
 
-
-
-
+// Test all combinations:
+console.log(advise(false, false)); // Skies are clear
+console.log(advise(false, true));  // Skies are clear
+console.log(advise(true, false));  // Buy an umbrella
+console.log(advise(true, true));   // Bring your umbrella
 
         console.log("---------------------")
         console.log("PART 3...")
+        document.getElementById("advise").addEventListener("click", function () {
+    let isRaining = document.getElementById("switch-raining").checked;
+    let ownsUmbrella = document.getElementById("switch-umbrella").checked;
 
-
-
-
+    let message = advise(isRaining, ownsUmbrella);
+    document.getElementById("display-message").textContent = message;
+});
 
     </script>
 </body>
