--- a/3-data-processing/gradebook.html
+++ b/3-data-processing/gradebook.html
@@ -63,19 +63,62 @@
 
         console.log("---------------------")
         console.log("PART 1...")
+        // A. Display download date
+console.log("Download Date:", gradebook.downloadDate);
 
+// B. Number of students
+console.log("Number of Students:", gradebook.students.length);
 
+// C. Display name and grade for each student
+gradebook.students.forEach(student => {
+    console.log(`${student.name}: ${student.finalGrade}`);
+});
 
+// D. Create array of grades
+const grades = gradebook.students.map(student => student.finalGrade);
+console.log("Grades:", grades);
 
+// E. Calculate and display average grade using d3
+const avg = d3.mean(grades);
+console.log("Average Grade:", avg.toFixed(2));
+
+// F. Calculate and display median grade using d3
+const median = d3.median(grades);
+console.log("Median Grade:", median.toFixed(2));
 
 
         console.log("---------------------")
         console.log("PART 2...")
+        const table = document.getElementById("display-gradebook");
 
+// Create and append header row
+const headerRow = document.createElement("tr");
+["Student ID", "Student Name", "Final Grade"].forEach(text => {
+    const th = document.createElement("th");
+    th.textContent = text;
+    headerRow.appendChild(th);
+});
+table.appendChild(headerRow);
 
+// Add a row for each student
+gradebook.students.forEach(student => {
+    const row = document.createElement("tr");
 
+    const idCell = document.createElement("td");
+    idCell.textContent = student.studentId;
 
+    const nameCell = document.createElement("td");
+    nameCell.textContent = student.name;
 
+    const gradeCell = document.createElement("td");
+    gradeCell.textContent = student.finalGrade;
+
+    row.appendChild(idCell);
+    row.appendChild(nameCell);
+    row.appendChild(gradeCell);
+
+    table.appendChild(row);
+});
 
     </script>
 
