--- a/3-data-processing/tweets.html
+++ b/3-data-processing/tweets.html
@@ -101,14 +101,50 @@
 
         console.log("---------------------")
         console.log("PART 1...")
+        // A. Author of first tweet
+console.log("A:", tweets[0].user.screen_name)
+
+// B. All tweets containing "@sandwoah"
+tweets.filter(tweet => tweet.full_text.includes("@sandwoah"))
+      .forEach(tweet => console.log("B:", tweet.user.screen_name))
+
+// C. Of the matching tweets, find one with highest likes
+const mentionTweets = tweets.filter(tweet => tweet.full_text.includes("@sandwoah"))
+const maxLiked = mentionTweets.reduce((prev, curr) => {
+    return (curr.likes_count > prev.likes_count) ? curr : prev
+})
+console.log("C:", maxLiked.user.screen_name)
 
 
+console.log("---------------------")
+console.log("PART 2...")
 
+// A. Sort tweets by likes, descending
+const sortedTweets = [...tweets].sort((a, b) => b.likes_count - a.likes_count)
 
+// B. Display in table
+const table = document.getElementById("social-feed")
 
+// Create header row
+const header = table.insertRow()
+const headers = ["Tweet Id", "Tweet Text", "User Screen Name", "User Followers", "Tweet Likes"]
+headers.forEach(text => {
+    const th = document.createElement("th")
+    th.textContent = text
+    header.appendChild(th)
+})
 
-        console.log("---------------------")
-        console.log("PART 2...")
+// Create rows for each tweet
+sortedTweets.forEach(tweet => {
+    const row = table.insertRow()
+
+    row.insertCell().textContent = tweet.id
+    row.insertCell().textContent = tweet.full_text
+    row.insertCell().textContent = tweet.user.screen_name
+    row.insertCell().textContent = tweet.user.followers
+    row.insertCell().textContent = tweet.likes_count
+})
+
 
 
 
