--- a/4-fetching-json-data/movies.html
+++ b/4-fetching-json-data/movies.html
@@ -79,27 +79,66 @@
         var requestUrl = "https://raw.githubusercontent.com/prof-rossetti/internet-technologies/refs/heads/main/data/hp-movies.json"
 
         fetch(requestUrl).then(response => response.json())
-            .then(function(data){
-                console.log("DATA", data)
+    .then(function(data){
+        console.log("DATA", data)
 
+        console.log("---------------------")
+        console.log("PART 1...")
 
-                console.log("---------------------")
-                console.log("PART 1...")
+        // A. Already done above: fetched data
+        // B. Number of movies
+        console.log("Number of movies:", data.length)
 
+        // C. Loop through and log title + year
+        data.forEach(movie => {
+            console.log(`${movie.Title} (${movie.Year})`)
+        })
 
+        // D. Movie with highest rating
+        const topRated = data.sort((a, b) => b.Rating - a.Rating)[0]
+        console.log("Top rated movie:", `${topRated.Title} (${topRated.Rating}/10)`)
 
+        console.log("---------------------")
+        console.log("PART 2...")
 
+        const selectEl = document.getElementById("select-movie")
+        const titleEl = document.getElementById("display-title")
+        const yearEl = document.getElementById("display-year")
+        const ratingEl = document.getElementById("display-rating")
+        const imageContainer = document.getElementById("image-container")
 
+        // A. Populate the dropdown
+        data.forEach(movie => {
+            const option = document.createElement("option")
+            option.value = movie.Id
+            option.textContent = movie.Title
+            selectEl.appendChild(option)
+        })
 
-                console.log("---------------------")
-                console.log("PART 2...")
+        // B. updateMovieInfo function
+        function updateMovieInfo() {
+            const selectedId = selectEl.value
+            const selectedMovie = data.find(movie => movie.Id === selectedId)
+            if (selectedMovie) {
+                titleEl.textContent = selectedMovie.Title
+                yearEl.textContent = selectedMovie.Year
+                ratingEl.textContent = selectedMovie.Rating
 
+                // Show image
+                imageContainer.innerHTML = ""
+                const img = document.createElement("img")
+                img.src = selectedMovie["Thumbnail Image URL"]
+                img.alt = selectedMovie.Title
+                img.style.maxWidth = "200px"
+                imageContainer.appendChild(img)
+            }
+        }
 
+        // C. Event listener
+        selectEl.addEventListener("change", updateMovieInfo)
+    })
+    .catch(err => console.log(err))
 
-
-
-            })
-            .catch(err => console.log(err))
 
     </script>
 </body>
