--- a/6-apis/company-overview.html
+++ b/6-apis/company-overview.html
@@ -10,119 +10,86 @@
     <a href="../index.html">Home</a>
 
     <h2>Dataset Information</h2>
-    <p>For this exercise, we will use data from the AlphaVantage API.
-        Specifically we will use the <a href="https://www.alphavantage.co/documentation/#company-overview">"Company Overview" endpoint</a>
+    <p>
+        For this exercise, we will use data from the AlphaVantage API.
+        Specifically we will use the
+        <a href="https://www.alphavantage.co/documentation/#company-overview">"Company Overview" endpoint</a>
         to fetch financial information about a given company.
-        Consult the API documentation to learn more.
     </p>
 
     <h2>Setup</h2>
     <p>First obtain an AlphaVantage API Key, and supply it when prompted.</p>
 
     <h2>Part 1</h2>
-    <p>
-        Write JavaScript code to answer the questions below.
-        Log each of the answers to the console.
-
-        <ol type="A">
-            <li>Define a function called <code>lookupCompany</code>. It should:
-                <ul>
-                    <li>Identify the stock symbol that has been input into the provided <code>input</code> element, and store it in a variable called <code>symbol</code>.</li>
-                    <li>Dynamically compile a request URL for the specified company, and store it in a variable called <code>requestUrl</code>.
-                    <li>Fetch information about the specified company using the specified request URL.</li>
-                    <li>Display information about the company, including its:
-                        name (i.e. "Netflix Inc"), description, and website URL.
-                    </li>
-                </ul>
-            </li>
-            <li>Invoke the function once when the page initially loads (no need for an event listener).</li>
-            <li>Add an event listener to also invoke the function whenever the "Lookup" button is clicked. </li>
-        </ol>
-    </p>
-
+    <ol type="A">
+        <li>Define a function called <code>lookupCompany</code>:
+            <ul>
+                <li>Get the stock symbol from the input</li>
+                <li>Build the request URL</li>
+                <li>Fetch and log the company data</li>
+                <li>Display the name, description, and website</li>
+            </ul>
+        </li>
+        <li>Run this function once on page load</li>
+        <li>Also run it on clicking the Lookup button</li>
+    </ol>
 
     <h2>Part 2</h2>
-    <p>
-        Write JavaScript code to answer the questions below.
-        Display the answers on the page in the designated areas.
-    </p>
-
-    <ol type="A">
-        <li>Revisit the <code>lookupCompany</code> function from Part 1. It should also:</li>
-            <ul>
-                <li>Display the company's name in the provided <code>span</code> element.</li>
-                <li>Display the company's description in the provided <code>span</code> element.</li>
-                <li>Display a hyperlink to the company's website in the provided <code>a</code> element. The link's text and <code>href</code> attribute should both be the website URL.</li>
-            </ul>
-    </ol>
+    <p>Display the results below using the provided span and anchor elements.</p>
 
     <hr>
     <h2>Display</h2>
 
     <label>Stock Symbol:</label>
-    <input id="input-symbol" type="text" placeholder="NFLX" value="NFLX"></input>
+    <input id="input-symbol" type="text" placeholder="NFLX" value="NFLX">
     <button id="lookup">Lookup</button>
 
     <div id="display-company-info">
         <p>Name: <span id="display-name">TODO</span></p>
         <p>Description: <span id="display-description">TODO</span></p>
-        <p>Website: <a id="display-link" href="#TODO">TODO</span></p>
+        <p>Website: <a id="display-link" href="#TODO">TODO</a></p>
     </div>
 
-
-
-
+    <!-- D3 Library -->
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script type="text/javascript">
-
-        // AVOID HARD-CODING THE CREDENTIALS
-        // USE SESSION STORAGE TO MINIMIZE THE NUMBER OF TIMES WE HAVE TO PROVIDE THE CREDENTIAL
-        // check session storage for the API Key:
-        var apiKey = sessionStorage.getItem("ALPHAVANTAGE_API_KEY")
+        // Store API key using session storage
+        var apiKey = sessionStorage.getItem("ALPHAVANTAGE_API_KEY");
         if (!apiKey) {
-            // if it isn't there, ask the user to supply it:
-            apiKey = prompt("Please enter your AlphaVantage API key:")
-            // store it in the session for later (so it will persist after refreshing the page)
-            sessionStorage.setItem("ALPHAVANTAGE_API_KEY", apiKey)
+            apiKey = prompt("Please enter your AlphaVantage API key:");
+            sessionStorage.setItem("ALPHAVANTAGE_API_KEY", apiKey);
         }
 
-
-
-        // FUNCTION DEFINITION
+        // Define the function
         function lookupCompany() {
-            var symbol = inputSymbol.value
-            console.log("SYMBOL:", symbol)
+            var symbol = document.getElementById("input-symbol").value;
+            console.log("SYMBOL:", symbol);
 
-            var requestUrl = `https://www.alphavantage.co/query?function=OVERVIEW&symbol=${symbol}&apikey=${apiKey}`
+            var requestUrl = `https://www.alphavantage.co/query?function=OVERVIEW&symbol=${symbol}&apikey=${apiKey}`;
+
             d3.json(requestUrl).then(function(data) {
-                console.log("RESPONSE:", data)
+                console.log("RESPONSE:", data);
 
-                console.log("---------------------")
-                console.log("PART 1...")
+                // Part 1 - Log
+                console.log("Company Name:", data.Name);
+                console.log("Description:", data.Description);
+                console.log("Website:", data.Website);
 
-
-
-
-
-
-                console.log("---------------------")
-                console.log("PART 2...")
-
-
-
-
-
+                // Part 2 - Display on page
+                document.getElementById("display-name").textContent = data.Name || "N/A";
+                document.getElementById("display-description").textContent = data.Description || "No description available.";
+                document.getElementById("display-link").textContent = data.Website || "N/A";
+                document.getElementById("display-link").href = data.Website || "#";
             }).catch(function(error) {
-                console.error("ERROR:", error)
-            })
+                console.error("ERROR:", error);
+            });
         }
 
-        // FUNCTION INVOCATIONS
-        // invoke function when the page loads:
-        //lookupCompany()
-        // invoke function when button is clicked:
-        //lookupButton.addEventListener("click", lookupCompany, false)
+        // Run once on load
+        lookupCompany();
 
+        // Run when Lookup button is clicked
+        document.getElementById("lookup").addEventListener("click", lookupCompany);
     </script>
 </body>
 </html>
